--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "webpack-dev-server": "^1.14.1",
     "eslint": "^2.8.0",
     "eslint-plugin-react": "^5.0.1",
-    "babel-eslint": "^6.0.4"
+    "babel-eslint": "^6.0.4",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.23.1"
   },
   "dependencies": {
     "react-dom": "^15.0.1",
