--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.0.1",
     "react": "^15.0.1",
     "webpack": "^1.13.0",
-    "react-router": "^2.3.0"
+    "react-router": "^2.3.0",
+    "classnames": "^2.2.4"
   }
 }
