--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^1.13.0",
     "react-router": "^2.3.0",
     "classnames": "^2.2.4",
-    "react-document-title": "^2.0.1"
+    "react-document-title": "^2.0.1",
+    "react-overlays": "^0.6.3"
   }
 }
