--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "css-loader": "^0.23.1"
   },
   "dependencies": {
-    "react-dom": "^15.0.1",
-    "react": "^15.0.1",
-    "webpack": "^1.13.0",
-    "react-router": "^2.3.0",
     "classnames": "^2.2.4",
+    "localforage": "^1.4.0",
+    "react": "^15.0.1",
     "react-document-title": "^2.0.1",
+    "react-dom": "^15.0.1",
     "react-overlays": "^0.6.3",
-    "react-spinkit": "^1.1.7"
+    "react-router": "^2.3.0",
+    "react-spinkit": "^1.1.7",
+    "webpack": "^1.13.0"
   }
 }
