--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.4",
+    "fuzzy": "^0.1.1",
     "immutable": "^3.8.1",
     "localforage": "^1.4.0",
     "react": "^15.0.1",
